# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2023 Zerario <derg@zerario.dev>
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-menu"
description = "Interactive CircuitPython menu library using RotaryIO and DisplayIO"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Zerario", email = "derg@zerario.dev"}
]
urls = {Homepage = "https://github.com/zerario/CircuitPython_menu"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "menu",
    "oled",
    "displayio",
    "rotaryio",
    "menu",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]

[tool.setuptools]
py-modules = ["menu"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
